feat: update nav.html with what currently works

--- a/html/nav.html
+++ b/html/nav.html
@@ -3,8 +3,7 @@
 	<legend>Navigation</legend>
         <ul>
             <li><a href="/">Homepage</a></li>
-	    <li><a href="/tags">All Tags</a></li>
-	    <li><a href="/about">About This Site</a></li>
+	    <li><a href="/archives">Archives</a></li>
         </ul>
     </fieldset>
 </nav>
