feat: include /tags page
The tagging feature officially works, in a static, "read only"
fashion.

But it would be nice for clicking on tag links to trigger a query that
loaded a version of the Archives page that filtered only those tags.

--- a/html/nav.html
+++ b/html/nav.html
@@ -4,6 +4,7 @@
         <ul>
             <li><a href="/">Homepage</a></li>
 	    <li><a href="/archives">Archives</a></li>
+            <li><a href="/tags">Tags</a></li>
         </ul>
     </fieldset>
 </nav>
