feat: add RSS feed to nav bar

--- a/html/nav.html
+++ b/html/nav.html
@@ -5,6 +5,7 @@
             <li><a href="/">Homepage</a></li>
 	    <li><a href="/archives">Archives</a></li>
             <li><a href="/tags">Tags</a></li>
+            <li><a href="/rss">RSS</a></li>
         </ul>
     </fieldset>
 </nav>
