--- a/html/nav.html
+++ b/html/nav.html
@@ -3,8 +3,9 @@
 	<legend>Navigation</legend>
         <ul>
             <li><a href="/">Homepage</a></li>
-	    <li><a href="/archives">Archives</a></li>
+            <li><a href="/archives">Archives</a></li>
             <li><a href="/tags">Tags</a></li>
+            <li><a href="/projects">Projects</a></li>
             <li><a href="/rss">RSS</a></li>
         </ul>
     </fieldset>
