feat: continue migrating "Archives" nomenclature into "Posts"

--- a/html/nav.html
+++ b/html/nav.html
@@ -3,7 +3,7 @@
 	<legend>Navigation</legend>
         <ul>
             <li><a href="/">Homepage</a></li>
-            <li><a href="/posts">Archives</a></li>
+            <li><a href="/posts">Posts</a></li>
             <li><a href="/tags">Tags</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/rss">RSS</a></li>
